--- a/image-factory/bundle-trusty-wordpress2/heat/infra_wdprss.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/infra_wdprss.yaml
@@ -85,7 +85,7 @@ resources:
       image: $IMAGE$
       flavor: { get_param: flavor_name }
       networks:
-        - network: { get_resource: subnet_id }
+        - subnet_id: {get_resource: internal_snet}
       security_groups:
         - { get_resource: security_group }
       user_data_format: RAW
