--- a/image-factory/bundle-trusty-wordpress2/ansible/seed-wdprss.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/seed-wdprss.yml
@@ -4,14 +4,52 @@
 
   vars:
     wp_db_name: wordpress
-    wp_db_pass: "{{ lookup('password', '/root/keystore chars=ascii_letters,digits,hexdigits,punctuation') }}"
+    wp_db_pass: "{{ lookup('password', '/tmp/keystore chars=ascii_letters,digits,hexdigits,punctuation') }}"
 
   tasks:
-    - name: wordpress configuration
-      template:
-        src=templates/wordpress.etc.conf.j2
-        dest=/etc/wordpress/config-default.php
+    - name: packages installed
+      apt:
+        pkg={{ item }}
+        state=present
+      with_items:
+        - apache2
+        - wordpress
+
+    - name: apache site configuration
+      copy:
+        src=files/wordpress.apache2.conf
+        dest=/etc/apache2/sites-available/default-wp.conf
         owner=root
+        group=root
+        mode=0644
+      notify: enable apache site
+
+    - name: wordpress content has correct ownership
+      file:
+        path="{{ item }}"
+        state=directory
+        owner=www-data
         group=www-data
-        mode=0640
-        
+        recurse=yes
+      with_items:
+        - /var/lib/wordpress/wp-content
+        - /usr/share/wordpress/wp-content
+
+    - name: Rewrite module activated
+      apache2_module:
+        name=rewrite
+        state=present
+
+    - name: apache service started
+      service: name=apache2 state=started enabled=yes
+
+  handlers:
+    - name: enable apache site
+      shell: /usr/sbin/a2dissite 000-default && /usr/sbin/a2ensite default-wp
+      notify: restart apache
+
+    - name: restart apache
+      service:
+        name=apache2
+        state=restarted
+        enabled=yes
