--- a/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
@@ -2,11 +2,15 @@
   user: cloud
   sudo: true
 
-  vars:
-    wp_db_pass: "{{ lookup('password', '/root/keystore chars=ascii_letters,digits,hexdigits,punctuation') }}"
-
   tasks:
-     
+    - name: packages installed
+      apt:
+        pkg={{ item }}
+        state=present
+      with_items:
+        - mysql-server
+        - python-mysqldb
+
     - name: mysql database is created
       mysql_db:
         name=wordpress
@@ -18,3 +22,10 @@
         password="{{ wp_db_pass }}"
         priv="wordpress.*:SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER"
         state=present
+
+    - name: mysql started
+      service: name=mysql state=started enabled=yes
+
+  handlers:
+    - name: restart mysql
+      service: name=mysql state=restarted enabled=yes
