--- a/image-factory/bundle-trusty-wordpress2/heat/srv_sql.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/srv_sql.yaml
@@ -37,6 +37,18 @@ parameters:
     type: comma_delimited_list
 
 resources:
+
+  security_group:
+    type: OS::Neutron::SecurityGroup
+    properties:
+      rules:
+        - { direction: ingress, protocol: TCP, port_range_min: 22, port_range_max: 22 }
+        - { direction: ingress, protocol: TCP, port_range_min: 3306, port_range_max: 3306 }
+        - { direction: ingress, protocol: ICMP }
+        - { direction: egress, protocol: ICMP }
+        - { direction: egress, protocol: TCP }
+        - { direction: egress, protocol: UDP }
+
   pool_member:
     depends_on: [instance]
     type: OS::Neutron::PoolMember
@@ -53,12 +65,20 @@ resources:
       key_name: {get_param: key_name}
       networks:
         - network: {get_param: network_id}
-      security_groups: {get_param: security_groups}
+      security_groups:
+        - {get_resource: security_group}
       metadata:
         services: sql
       user_data_format: RAW
       user_data: |
-        #!/bin/bash
+        #!/usr/bin/env bash
+        echo "$(date) - START" >> /var/log/sql_srv.log
+        export DEBIAN_FRONTEND=noninteractive
+        apt-get update 2>&1 >> /var/log/sql_srv.log
+        apt-get update 2>&1 >> /var/log/sql_srv.log
+        echo "$(date) - update done" >> /var/log/sql_srv.log
+        apt-get -o Dpkg::Options::="--force-confold" upgrade -y 2>&1 >> /var/log/sql_srv.log
+        echo "$(date) - upgrade done" >> /var/log/sql_srv.log
         mkdir -p /var/lib/mysql
         mkfs.ext4 /dev/vdb
         echo '/dev/vdb /var/lib/mysql ext4 defaults 0 2' >> /etc/fstab
@@ -67,7 +87,7 @@ resources:
         echo "[local]" >> /etc/ansible/hosts
         echo "127.0.0.1 ansible_connection=local" >> /etc/ansible/hosts
         cd /root && git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-        ansible-playbook root/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml boot
+        ansible-playbook root/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml boot
         rm -rf /root/boot
 
   volume:
