--- a/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
@@ -20,7 +20,7 @@
       mysql_user:
         name=wordpress
         password="{{ wp_db_pass }}"
-        priv="wordpress.*:"SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER"
+        priv="wordpress.*:SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER"
         state=present
 
     - name: mysql started
