--- a/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
@@ -19,7 +19,7 @@
     - name: mysql user is created
       mysql_user:
         name=wordpress
-        password="{{ wp_db_pass }}"
+        password="CLOUDPASS"
         priv="wordpress.*:SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER"
         state=present
 
