--- a/image-factory/bundle-trusty-wordpress2/heat/srv_sql.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/srv_sql.yaml
@@ -87,8 +87,8 @@ resources:
         echo "[local]" >> /etc/ansible/hosts
         echo "127.0.0.1 ansible_connection=local" >> /etc/ansible/hosts
         cd /root && git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-        ansible-playbook root/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml boot
-        rm -rf /root/boot
+        ansible-playbook /root/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
+      
 
   volume:
     type: OS::Cinder::Volume
