--- a/image-factory/bundle-trusty-wordpress2/heat/srv_wdprss.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/srv_wdprss.yaml
@@ -69,12 +69,13 @@ resources:
             mkdir /etc/ansible
             echo "[local]" >> /etc/ansible/hosts
             echo "127.0.0.1 ansible_connection=local" >> /etc/ansible/hosts
-            cd /root && git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-            ansible-playbook /root/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-wdprss.yml
+            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
+            ansible-playbook CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-wdprss.yml
             touch /var/log/sql_vip
             sudo sed -i "s/$sql_ip$/g" /var/log/sql_vip
           params:
             $sql_ip$: { get_param: [sql_lb_pool, vip, address]}
+
 outputs:
   first_address:
     description: IP address of the first interface
