--- a/image-factory/bundle-trusty-wordpress2/heat/srv_sql.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/srv_sql.yaml
@@ -86,9 +86,9 @@ resources:
         mkdir /etc/ansible
         echo "[local]" >> /etc/ansible/hosts
         echo "127.0.0.1 ansible_connection=local" >> /etc/ansible/hosts
-        cd /root && git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-        ansible-playbook /root/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
-      
+        git clone  https://github.com/mickaelremilien/CLOUDPATT.git
+        ansible-playbook CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
+
 
   volume:
     type: OS::Cinder::Volume
