--- a/image-factory/bundle-trusty-wordpress2/ansible/templates/wordpress.etc.conf
+++ b/image-factory/bundle-trusty-wordpress2/ansible/templates/wordpress.etc.conf
@@ -2,7 +2,9 @@
 define('DB_NAME', '{{ wp_db_name }}');
 define('DB_USER', 'wordpress');
 define('DB_PASSWORD', '{{ wp_db_pass }}');
-define('DB_HOST', 'localhost');
+define('DB_HOST', '10.1.2.3');
+define('DB_HOST', '10.1.2.2');
+define('DB_HOST', '10.1.2.4');
 define('WP_CONTENT_DIR', '/var/lib/wordpress/wp-content');
 define('WPLANG', 'fr_FR');
 define('FS_METHOD', 'direct');
