--- a/image-factory/bundle-trusty-wordpress2/heat/srv_wdprss.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/srv_wdprss.yaml
@@ -72,8 +72,7 @@ resources:
             cd /home/cloud/
             git clone  https://github.com/mickaelremilien/CLOUDPATT.git
             sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-wdprss.yml
-            touch /var/log/sql_vip
-            sudo sed -i "s/$sql_ip$/g" /var/log/sql_vip
+            echo "$sql_ip$" > /var/log/sql_vip
           params:
             $sql_ip$: { get_param: [sql_lb_pool, vip, address]}
 
