--- a/image-factory/bundle-trusty-vpn2/heat/infra_vpn.yaml
+++ b/image-factory/bundle-trusty-vpn2/heat/infra_vpn.yaml
@@ -127,6 +127,7 @@ resources:
       pool_id: {get_resource: vpn_lb_pool}
 
   vpn_secgroup:
+    depends_on: [internal_snet]
     type: OS::Neutron::SecurityGroup
     properties:
       rules:
@@ -156,7 +157,7 @@ resources:
           flavor: {get_param: flavor}
           image: {get_param: image}
           key_name: {get_param: keypair_name}
-          network_id: {get_resource: internal_net}
+          network_id: {get_resource: internal_snet}
           security_groups:
             - {get_resource: vpn_secgroup}
 
