--- a/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
@@ -4,7 +4,7 @@
 
   vars:
    wp_db_pass: "{{ lookup('password', '/tmp/keystore chars=ascii_letters,digits,hexdigits,punctuation') }}"
-
+   wp_mysql_ip: "{{ lookup('file', '/home/cloud/sql_ip_bind') }}"
   tasks:
     - name: packages installed
       apt:
@@ -18,6 +18,14 @@
       mysql_db:
         name=wordpress
         state=present
+
+    - name: mysql configuration binding
+      lineinfile:
+        backup=yes
+        state=present
+        dest=/etc/mysql/my.cnf
+        regexp='bind-address            = 127.0.0.1'
+        line='bind-address            ={{ wp_mysql_ip }}'
 
     - name: mysql user is created
       mysql_user:
