--- a/image-factory/bundle-trusty-wordpress2/ansible/seed-wdprss.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/seed-wdprss.yml
@@ -6,7 +6,7 @@
     wp_db_name: wordpress
     wp_db_pass: "toto"
     #wp_db_pass: "{{ lookup('password', '/root/keystore chars=ascii_letters,digits,hexdigits,punctuation') }}"
-    wp_mysql_lb: "{{ lookup('file', '/var/log/sql_vip') }}"
+    #wp_mysql_lb: "{{ lookup('file', '/var/log/sql_vip') }}"
 
   tasks:
     - name: packages installed
