--- a/image-factory/bundle-trusty-wordpress2/heat/srv_wdprss.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/srv_wdprss.yaml
@@ -54,7 +54,7 @@ resources:
         - network: {get_param: network_id}
       security_groups: {get_param: security_groups}
       user_data_format: RAW
-      user_data: |
+      user_data:
         str_replace:
           template: |
             #!/usr/bin/env bash
@@ -73,7 +73,6 @@ resources:
             git clone  https://github.com/mickaelremilien/CLOUDPATT.git
             sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-wdprss.yml
             echo "$sql_ip$" > /var/log/sql_vip
-
           params:
             $sql_ip$: { get_param: [sql_lb_pool, vip, address]}
 
