--- a/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
@@ -11,6 +11,11 @@ parameters:
     type: string
     hidden: true
 
+  image:
+    type: string
+    description: Glance Image
+    default: "Ubuntu 14.04"
+
   keypair_name:
     description: Keypair to inject in instance
     label: SSH Keypair
@@ -68,7 +73,7 @@ resources:
     type: OS::Nova::Server
     properties:
       key_name: { get_param: keypair_name }
-      image: $IMAGE$
+      image:  { get_param: image }
       flavor: { get_param: flavor_name }
       networks:
         - network: { get_resource: network }
@@ -80,3 +85,12 @@ resources:
     properties:
       floating_ip: { get_resource: floating_ip }
       server_id: { get_resource: server }
+
+outputs:
+  floating_ip:
+    description: IP address of the deployed compute server
+    value: { get_attr: [floating_ip, floating_ip_address] }
+
+  server_id:
+    description: ID of the server
+    value: {get_resource: server}
