--- a/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
@@ -55,15 +55,17 @@
     - name: fr locale generated
       locale_gen: name=fr_FR.UTF-8 state=present
 
-    - name: Gunzip server configuration
-      command: gunzip /usr/share/doc/openvpn/examples/sample-config-files/server.conf.gz /etc/openvpn/server.conf
+    - name: Gunzip server configuration copy    
+      copy:
+        src=/usr/share/doc/openvpn/examples/sample-config-files/server.conf.gz
+        dest=/etc/openvpn/
       sudo: yes
-    #- name: Gunzip server configuration
-    #  command:
-    #    src=/usr/share/doc/openvpn/examples/sample-config-files/server.conf.gz
-    #    dest=/etc/openvpn/
-    #  sudo: yes
-
+      
+    - name: Gunzip server configuration
+      command:
+        sudo gunzip /etc/openvpn/server.conf.gz
+      sudo: yes
+ 
     - name: Copy file configuration client
       copy:
         src=/usr/share/doc/openvpn/examples/sample-config-files/client.conf
@@ -98,7 +100,7 @@
     #openvpn/client.ovpn
     - name: client.ovpn configuration
       copy:
-        src=files/client.ovpn
+        src=roles/vpn_static/files/client.ovpn
         dest=/etc/openvpn/client.ovpn
         owner=root
         group=root
@@ -106,7 +108,7 @@
         #openvpn/server.conf
     - name: server.conf configuration
       copy:
-        src=files/server.conf
+        src=roles/vpn_static/files/server.conf
         dest=/etc/openvpn/server.conf
         owner=root
         group=root
@@ -114,7 +116,7 @@
         #sysctl.conf
     - name: sysctl.conf configuration
       copy:
-        src=files/sysctl.conf
+        src=roles/vpn_static/files/sysctl.conf
         dest=/etc/sysctl.conf
         owner=root
         group=root
@@ -122,15 +124,15 @@
         #ufw/before.rules
     - name: before.rules configuration
       copy:
-        src=files/before.rules
+        src=roles/vpn_static/files/before.rules
         dest=/etc/ufw/before.rules
         owner=root
         group=root
-        mode=0644
+        mode=0755
         #easy-rsa/vars
     - name: var configuration
       copy:
-        src=files/vars
+        src=roles/vpn_static/files/vars
         dest=/etc/openvpn/easy-rsa/vars
         owner=root
         group=root
@@ -138,7 +140,7 @@
         #ufw
     - name: before.rules configuration
       copy:
-        src=files/ufw
+        src=roles/vpn_static/files/ufw
         dest=/etc/default/ufw
         owner=root
         group=root
